# DistributedPerceptron

./: .gitignore  CMakeLists.txt  CONFIG  DistributedPerceptron  Old_Save  README  Save_master_0  Save_master_1  Save_master_2  TODO  a.out  bootstrap  script.sh
src/: a.out  header.hh  main.cc  master.cc  master.hh  process.cc  process.hh  run.cc  timeout.cc  timeout.hh  worker.cc  worker.hh
src/matrix/: matrix.cc  matrix.hh
src/nn/: nn.cc  nn.hh
tests/: test-matrix.cc  test-message.cc  test-nn.cc
